2.0.27.4
Changes:

* add PDDeviceN - Special Color Space
* update annotation processor
* update PlainText layout
* update base models to 3.x version
* fix PDIndexed Color Space
* fix from1Bit bitmap conveter
* fix an issue with the path stroke width
* fix minor issues in SampledImageReader