@@ -16,6 +16,7 @@
  */
 package com.tom_roush.pdfbox.pdmodel.font;
 
+import android.os.Build;
 import android.util.Log;
 
 import java.io.IOException;
@@ -43,15 +44,16 @@ import com.tom_roush.pdfbox.util.Vector;
  */
 public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFont
 {
+
     protected final PDType0Font parent;
 
     private Map<Integer, Float> widths;
     private float defaultWidth;
     private float averageWidth;
 
-    private final Map<Integer, Float> verticalDisplacementY = new HashMap<Integer, Float>(); // w1y
-    private final Map<Integer, Vector> positionVectors = new HashMap<Integer, Vector>();     // v
-    private float[] dw2 = new float[] { 880, -1000 };
+    private final Map<Integer, Float> verticalDisplacementY = new HashMap<>(); // w1y
+    private final Map<Integer, Vector> positionVectors = new HashMap<>();     // v
+    private final float[] dw2 = { 880, -1000 };
 
     protected final COSDictionary dict;
     private PDFontDescriptor fontDescriptor;
@@ -71,11 +73,11 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
 
     private void readWidths()
     {
-        widths = new HashMap<Integer, Float>();
-        COSBase wBase = dict.getDictionaryObject(COSName.W);
-        if (wBase instanceof COSArray)
+        // see 9.7.4.3, "Glyph Metrics in CIDFonts"
+        widths = new HashMap<>();
+        COSArray wArray = dict.getCOSArray(COSName.W);
+        if (wArray != null)
         {
-            COSArray wArray = (COSArray) wBase;
             int size = wArray.size();
             int counter = 0;
             while (counter < size - 1)
@@ -138,10 +140,9 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
     private void readVerticalDisplacements()
     {
         // default position vector and vertical displacement vector
-        COSBase dw2Base = dict.getDictionaryObject(COSName.DW2);
-        if (dw2Base instanceof COSArray)
+        COSArray dw2Array = dict.getCOSArray(COSName.DW2);
+        if (dw2Array != null)
         {
-            COSArray dw2Array = (COSArray) dw2Base;
             COSBase base0 = dw2Array.getObject(0);
             COSBase base1 = dw2Array.getObject(1);
             if (base0 instanceof COSNumber && base1 instanceof COSNumber)
@@ -152,10 +153,9 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
         }
 
         // vertical metrics for individual CIDs.
-        COSBase w2Base = dict.getDictionaryObject(COSName.W2);
-        if (w2Base instanceof COSArray)
+        COSArray w2Array = dict.getCOSArray(COSName.W2);
+        if (w2Array != null)
         {
-            COSArray w2Array = (COSArray) w2Base;
             for (int i = 0; i < w2Array.size(); i++)
             {
                 COSNumber c = (COSNumber) w2Array.getObject(i);
@@ -217,7 +217,7 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
     {
         if (fontDescriptor == null)
         {
-            COSDictionary fd = (COSDictionary) dict.getDictionaryObject(COSName.FONT_DESC);
+            COSDictionary fd = dict.getCOSDictionary(COSName.FONT_DESC);
             if (fd != null)
             {
                 fontDescriptor = new PDFontDescriptor(fd);
@@ -243,7 +243,7 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
      */
     private float getDefaultWidth()
     {
-        if (defaultWidth == 0)
+        if (Float.compare(defaultWidth, 0) == 0)
         {
             COSBase base = dict.getDictionaryObject(COSName.DW);
             if (base instanceof COSNumber)
@@ -326,7 +326,7 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
     // todo: this method is highly suspicious, the average glyph width is not usually a good metric
     public float getAverageFontWidth()
     {
-        if (averageWidth == 0)
+        if (Float.compare(averageWidth, 0) == 0)
         {
             float totalWidths = 0.0f;
             int characterCount = 0;
@@ -355,15 +355,13 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
 
     /**
      * Returns the CIDSystemInfo, or null if it is missing (which isn't allowed but could happen).
+     *
+     * @return the CIDSystemInfo, or null
      */
     public PDCIDSystemInfo getCIDSystemInfo()
     {
-        COSBase base = dict.getDictionaryObject(COSName.CIDSYSTEMINFO);
-        if (base instanceof COSDictionary)
-        {
-            return new PDCIDSystemInfo((COSDictionary) base);
-        }
-        return null;
+        COSDictionary cidSystemInfo = dict.getCOSDictionary(COSName.CIDSYSTEMINFO);
+        return cidSystemInfo != null ? new PDCIDSystemInfo(cidSystemInfo) : null;
     }
 
     /**
@@ -379,9 +377,11 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
      *
      * @param code character code
      * @return GID
-     * @throws java.io.IOException
+     * @throws java.io.IOException if the mapping could not be read
      */
     public abstract int codeToGID(int code) throws IOException;
+
+    public abstract byte[] encodeGlyphId(int glyphId);
 
     /**
      * Encodes the given Unicode code point for use in a PDF content stream.
@@ -398,13 +398,16 @@ public abstract class PDCIDFont implements COSObjectable, PDFontLike, PDVectorFo
     final int[] readCIDToGIDMap() throws IOException
     {
         int[] cid2gid = null;
-        COSBase map = dict.getDictionaryObject(COSName.CID_TO_GID_MAP);
-        if (map instanceof COSStream)
+        COSStream stream = dict.getCOSStream(COSName.CID_TO_GID_MAP);
+        if (stream != null)
         {
-            COSStream stream = (COSStream) map;
-
             InputStream is = stream.createInputStream();
-            byte[] mapAsBytes = IOUtils.toByteArray(is);
+            byte[] mapAsBytes = null;
+            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+                mapAsBytes = is.readAllBytes();
+            } else {
+                mapAsBytes = IOUtils.readBytesCompat(is);
+            }
             IOUtils.closeQuietly(is);
             int numberOfInts = mapAsBytes.length / 2;
             cid2gid = new int[numberOfInts];
